--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -5,8 +5,7 @@
       <a href="/user/{{id}}" target="_blank" class="text-warning" style="text-decoration: none">{{user.username}}</a>
     </div>
     <div class="text">
-      {{comment_text}}<br>
-      <br></br>
+      {{comment_text}}
     </div>
   </section>
   {{/each}}
